--- a/jlu-drcom-client-qt/aboutwindow.ui
+++ b/jlu-drcom-client-qt/aboutwindow.ui
@@ -54,7 +54,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../build-jlu-drcom-client-qt-Desktop_Qt_5_0_2_GCC_64bit-Debug/share/drcom-client.png</pixmap>
+    <pixmap resource="resource.qrc">:/png</pixmap>
    </property>
   </widget>
   <widget class="QTextBrowser" name="textBrowser">
@@ -80,7 +80,9 @@ p, li { white-space: pre-wrap; }
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
